--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/style.css" />
+
     <link rel="icon" href="Images/favicon.ico" />
     <title>Ritik's Personal website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+
+        <link rel="stylesheet" href="/css/style.css" />
 
 
 <!-- For Icon -->
